--- a/pages/17721.html
+++ b/pages/17721.html
@@ -321,7 +321,7 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/sequent'>sequent</a></p>
 
-<p><a class='existingWikiWord' href='/nlab/show/hypothesis'>hypothesis</a>/<a class='existingWikiWord' href='/nlab/show/context'>context</a>/<a class='existingWikiWord' href='/nlab/show/antecedent'>antecedent</a> <math class='maruku-mathml' display='inline' id='mathml_159eed46455f623cf8c9a9d1d4a61da88c052f4a_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>conclusion</a>/<a class='existingWikiWord' href='/nlab/show/consequent'>consequence</a>/<a class='existingWikiWord' href='/nlab/show/succedent'>succedent</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/hypothesis'>hypothesis</a>/<a class='existingWikiWord' href='/nlab/show/context'>context</a>/<a class='existingWikiWord' href='/nlab/show/antecedent'>antecedent</a> <math class='maruku-mathml' display='inline' id='mathml_8a13d87509f08ff6d0916de9f166eef60e28e82c_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>conclusion</a>/<a class='existingWikiWord' href='/nlab/show/consequent'>consequence</a>/<a class='existingWikiWord' href='/nlab/show/succedent'>succedent</a></p>
 </li>
 
 <li>
@@ -371,10 +371,10 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/sequent'>hypothetical judgement</a>, <a class='existingWikiWord' href='/nlab/show/sequent'>sequent</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/judgment'>hypothetical judgement</a>, <a class='existingWikiWord' href='/nlab/show/sequent'>sequent</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_159eed46455f623cf8c9a9d1d4a61da88c052f4a_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_8a13d87509f08ff6d0916de9f166eef60e28e82c_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
 </ul>
 </li>
 </ul>
@@ -578,18 +578,18 @@ margin-left: 0em;
 <h2 id='idea'>Idea</h2>
 
 <p>In <a class='existingWikiWord' href='/nlab/show/type+theory'>type theory</a>, <em>induction-induction</em> is a principle for mutually defining <a class='existingWikiWord' href='/nlab/show/type'>types</a> of the form</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_159eed46455f623cf8c9a9d1d4a61da88c052f4a_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi><mo lspace='verythinmathspace'>:</mo><mi>Type</mi><mspace width='thinmathspace'></mspace><mo>,</mo><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mi>and</mi><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mi>B</mi><mo lspace='verythinmathspace'>:</mo><mi>A</mi><mo>→</mo><mi>Type</mi><mspace width='thinmathspace'></mspace><mo>,</mo></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_8a13d87509f08ff6d0916de9f166eef60e28e82c_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi><mo lspace='verythinmathspace'>:</mo><mi>Type</mi><mspace width='thinmathspace'></mspace><mo>,</mo><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mi>and</mi><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mi>B</mi><mo lspace='verythinmathspace'>:</mo><mi>A</mi><mo>→</mo><mi>Type</mi><mspace width='thinmathspace'></mspace><mo>,</mo></mrow><annotation encoding='application/x-tex'>
   A \colon Type\,,\;\;\; and \;\;\; B \colon A \to Type
   \,,
 
 </annotation></semantics></math></div>
-<p>where both <math class='maruku-mathml' display='inline' id='mathml_159eed46455f623cf8c9a9d1d4a61da88c052f4a_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_159eed46455f623cf8c9a9d1d4a61da88c052f4a_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi></mrow><annotation encoding='application/x-tex'>B</annotation></semantics></math> are <a class='existingWikiWord' href='/nlab/show/inductive+type'>defined inductively</a>, such that the constructors for <math class='maruku-mathml' display='inline' id='mathml_159eed46455f623cf8c9a9d1d4a61da88c052f4a_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> can refer to <math class='maruku-mathml' display='inline' id='mathml_159eed46455f623cf8c9a9d1d4a61da88c052f4a_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi></mrow><annotation encoding='application/x-tex'>B</annotation></semantics></math> and vice versa. In addition, the constructor for <math class='maruku-mathml' display='inline' id='mathml_159eed46455f623cf8c9a9d1d4a61da88c052f4a_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi></mrow><annotation encoding='application/x-tex'>B</annotation></semantics></math> can refer to the constructor for <math class='maruku-mathml' display='inline' id='mathml_159eed46455f623cf8c9a9d1d4a61da88c052f4a_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math>.</p>
+<p>where both <math class='maruku-mathml' display='inline' id='mathml_8a13d87509f08ff6d0916de9f166eef60e28e82c_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_8a13d87509f08ff6d0916de9f166eef60e28e82c_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi></mrow><annotation encoding='application/x-tex'>B</annotation></semantics></math> are <a class='existingWikiWord' href='/nlab/show/inductive+type'>defined inductively</a>, such that the constructors for <math class='maruku-mathml' display='inline' id='mathml_8a13d87509f08ff6d0916de9f166eef60e28e82c_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> can refer to <math class='maruku-mathml' display='inline' id='mathml_8a13d87509f08ff6d0916de9f166eef60e28e82c_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi></mrow><annotation encoding='application/x-tex'>B</annotation></semantics></math> and vice versa. In addition, the constructor for <math class='maruku-mathml' display='inline' id='mathml_8a13d87509f08ff6d0916de9f166eef60e28e82c_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi></mrow><annotation encoding='application/x-tex'>B</annotation></semantics></math> can refer to the constructor for <math class='maruku-mathml' display='inline' id='mathml_8a13d87509f08ff6d0916de9f166eef60e28e82c_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math>.</p>
 
 <p>Such induction-induction occurs for instance when formalising <a class='existingWikiWord' href='/nlab/show/dependent+type+theory'>dependent type theory</a> in <a class='existingWikiWord' href='/nlab/show/type+theory'>type theory</a>.</p>
 
 <h2 id='results'>Results</h2>
 
-<p>Inductive-inductive types are related to <a class='existingWikiWord' href='/nlab/show/inductive-recursive+type'>inductive-recursive types</a>. Importantly, inductive-inductive types have an initial algebra semantics with respect to <span class='newWikiWord'>dialgebras<a href='/nlab/new/dialgebras'>?</a></span>. In <a href='#ForsbergThesis'>Forsberg’s thesis</a> inductive-inductive types (with simple elimination rules) are reduced to <a class='existingWikiWord' href='/nlab/show/inductive+family'>indexed inductive types</a>. These in turn can be reduced to <a class='existingWikiWord' href='/nlab/show/W-type'>W-types</a> in an extensional type theory. See <a class='existingWikiWord' href='/nlab/show/inductive+family'>inductive families</a>.</p>
+<p>Inductive-inductive types are related to <a class='existingWikiWord' href='/nlab/show/inductive-recursive+type'>inductive-recursive types</a>. Importantly, inductive-inductive types have an initial algebra semantics with respect to <span class='newWikiWord'>dialgebras<a href='/nlab/new/dialgebras'>?</a></span>. In <a href='#ForsbergThesis'>Forsberg’s thesis</a> inductive-inductive types are reduced to <a class='existingWikiWord' href='/nlab/show/inductive+family'>indexed inductive types</a> in the setting of extensional type theory. This reduction however only provides non-dependent elimination rules. Indexed inductive types in turn can be reduced to <a class='existingWikiWord' href='/nlab/show/W-type'>W-types</a> in extensional type theory. See <a class='existingWikiWord' href='/nlab/show/inductive+family'>inductive families</a>.</p>
 
 <p>The consistency of the framework used for the elimination (e.g. in the <a class='existingWikiWord' href='/nlab/show/proof+assistant'>theorem prover</a> <a class='existingWikiWord' href='/nlab/show/Agda'>Agda</a>) is not so clear, as it allows the definition of a universe containing a code for itself. There is an axiomatisation of the new principle in such a way that the resulting type theory is consistent, as proved by constructing a set-theoretic model; see <a href='#ForsbergSetzer10'>Forsberg-Setzer 10</a>.</p>
 
@@ -627,16 +627,12 @@ margin-left: 0em;
 <li id='QIIT'>
 <p>Thorsten Altenkirch, Paolo Capriotti, Gabe Dijkstra, Fredrik Nordvall Forsberg, <em>Quotient inductive-inductive types</em>, <a href='https://arxiv.org/abs/1612.02346'>arXiv</a>, 2016</p>
 </li>
-
-<li>
-<p>Ambrus Kaposi, András Kovács, <em><a href='https://akaposi.github.io/qiit.pdf'>Codes for quotient inductive inductive types</a></em></p>
-</li>
 </ul>
 
 <p>Parts of the above text are taken from</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/homotopytypetheory/show/HomePage' title='homotopytypetheory'>Homtopy Type Theory Wiki</a>, <em><a class='existingWikiWord' href='/homotopytypetheory/show/inductive-inductive+type' title='homotopytypetheory'>inductive-inductive type</a></em></li>
+<li><a class='existingWikiWord' href='/homotopytypetheory/show/HomePage' title='homotopytypetheory'>Homotopy Type Theory Wiki</a>, <em><a class='existingWikiWord' href='/homotopytypetheory/show/inductive-inductive+type' title='homotopytypetheory'>inductive-inductive type</a></em></li>
 </ul>
 
 <p>
@@ -645,14 +641,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November 16, 2017 04:49:22 
-  by <span class="newWikiWord">Ambrus Kaposi<a href="/nlab/new/Ambrus+Kaposi">?</a></span>
-  (157.181.167.45)
+  Revised on January 23, 2018 06:44:30 
+  by <a class="existingWikiWord" href="/nlab/show/Bas+Spitters">Bas Spitters</a>
+  (145.97.26.112)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/inductive-inductive+type" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/inductive-inductive+type/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/inductive-inductive+type" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/inductive-inductive+type" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/inductive-inductive+type" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/inductive-inductive+type/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/inductive-inductive+type" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/inductive-inductive+type" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
