--- a/pages/18955.html
+++ b/pages/18955.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -741,7 +741,7 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#definition'>Definition</a></li><li><a href='#examples'>Examples</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a>, <a class='existingWikiWord' href='/nlab/show/renormalization'>(&quot;re&quot;-)normalization</a> is an <a class='existingWikiWord' href='/nlab/show/extension+of+distributions'>extension</a> of <a class='existingWikiWord' href='/nlab/show/time-ordered+product'>time-ordered products</a>, uniquely defined away from coinciding spacetime arguments, to the locus of coinciding spacetime arguments. Before the extension these <a class='existingWikiWord' href='/nlab/show/time-ordered+product'>time-ordered products</a> may generally enjoy further properties beyond the <a class='existingWikiWord' href='/nlab/show/causal+additivity'>causal factorization</a> that characterizes them as time-ordered products. Not all these properties necessarily need to be preserved by a choice of <a class='existingWikiWord' href='/nlab/show/extension+of+distributions'>extension of distributions</a> to coinciding spacetime arguments. A <em>renormalization condition</em> is the condition that some such properties ought to be preserved by the choice of <a class='existingWikiWord' href='/nlab/show/renormalization'>(&quot;re-&quot;)normalization</a>.</p>
@@ -749,6 +749,14 @@ margin-left: 0em;
 <p>The <a class='existingWikiWord' href='/nlab/show/main+theorem+of+perturbative+renormalization'>main theorem of perturbative renormalization</a> holds true if at least the renormalization conditions “field independence” and “translation equivariance” are imposed. Depending on how many other renormalization conditions are imposed, the resulting <a class='existingWikiWord' href='/nlab/show/St%C3%BCckelberg-Petermann+renormalization+group'>Stückelberg-Petermann renormalization group</a> becomes smaller. (<a href='#Duetsch18'>Duetsch 18, remark 3.102</a>)</p>
 
 <p>Besides “field indepence” and “translation invariance” a key renormalization condition for <a class='existingWikiWord' href='/nlab/show/gauge+theory'>gauge theories</a> is the <em><a class='existingWikiWord' href='/nlab/show/quantum+master+equation'>quantum master equation</a></em> or quivalently <em><a class='existingWikiWord' href='/nlab/show/Ward+identity'>master Ward identity</a></em>. If this renormalization condition cannot be satisfied, one says that the corresponding <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative QFT</a> does not exist due to a “<a class='existingWikiWord' href='/nlab/show/quantum+anomaly'>gauge anomaly</a>”. (<a href='#Duetsch18'>Dütsch 18, section 4.2</a>)</p>
+
+<h2 id='definition'>Definition</h2>
+
+<p>For the moment see at <em><a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrix</a></em> <a href='S-matrix#RenormalizationConditions'>this definition</a>.</p>
+
+<h2 id='examples'>Examples</h2>
+
+<p>For the moment see at <em><a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrix</a></em> <a href='S-matrix#BasicConditionsRenormalization'>this prop.</a></p>
 
 <h2 id='references'>References</h2>
 
@@ -761,14 +769,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on January 21, 2018 16:39:39 
+  Revised on January 23, 2018 07:33:28 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (213.30.232.146)
+  (83.208.22.80)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/renormalization+condition" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/renormalization+condition" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/renormalization+condition/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/renormalization+condition" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/renormalization+condition" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
