--- a/pages/18681.html
+++ b/pages/18681.html
@@ -312,6 +312,10 @@ margin-left: 0em;
 
 <ul>
 <li>
+<p><a class='existingWikiWord' href='/nlab/show/anomalous+magnetic+moment'>anomalous magnetic moment</a></p>
+</li>
+
+<li>
 <p><a class='existingWikiWord' href='/nlab/show/magnetic+field'>magnetic field</a></p>
 </li>
 
@@ -322,35 +326,13 @@ margin-left: 0em;
 
 <h2 id='references'>References</h2>
 
-<h4 id='general'>General</h4>
+<h3 id='general'>General</h3>
 
 <ul>
 <li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Magnetic_moment'>Magnetic moment</a></em></li>
 </ul>
 
-<h3 id='anomalous_magnetic_dipole_moment'>Anomalous magnetic dipole moment</h3>
-
-<ul>
-<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Anomalous_magnetic_dipole_moment'>Anomalous magnetic dipole moment</a></em></li>
-</ul>
-
-<p>The computation of the anomalous magnetic dipole moment of the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> in <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>QED</a> is spelled out (via <a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a>) in</p>
-
-<ul>
-<li id='Scharf95'><a class='existingWikiWord' href='/nlab/show/G%C3%BCnter+Scharf'>Günter Scharf</a>, section 3.10, culminating in (3.10.20), of <em><a class='existingWikiWord' href='/nlab/show/Finite+Quantum+Electrodynamics+--+The+Causal+Approach'>Finite Quantum Electrodynamics -- The Causal Approach</a></em>, Berlin: Springer-Verlag, 1995, 2nd edition</li>
-</ul>
-
-<p>For more see</p>
-
-<ul>
-<li id='Steinmann02'><a class='existingWikiWord' href='/nlab/show/Othmar+Steinmann'>Othmar Steinmann</a>, <em>What is the Magnetic Moment of the Electron?</em>, Commun.Math.Phys. 237 (2003) 181-201 (<a href='https://arxiv.org/abs/hep-ph/0211187'>arXiv:hep-ph/0211187</a>)</li>
-</ul>
-
 <p>
-</p>
-
-<p>
- 
 </p>
 
 <p>
@@ -359,14 +341,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October 16, 2017 22:05:12 
+  Revised on January 24, 2018 14:16:35 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.50.90)
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/magnetic+dipole+moment" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/magnetic+dipole+moment/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/magnetic+dipole+moment" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/magnetic+dipole+moment" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/magnetic+dipole+moment" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/magnetic+dipole+moment/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/magnetic+dipole+moment" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/magnetic+dipole+moment" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
