--- a/pages/17975.html
+++ b/pages/17975.html
@@ -1080,6 +1080,12 @@ margin-left: 0em;
 
 <p>and more.</p>
 
+<p>The suggestion that fuzzy dark matter induces the observed almost-flat galactic rotation curves (“<a class='existingWikiWord' href='/nlab/show/MOND'>MOND</a>”) seems to go back to (<a href='#Sin92'>Sin 92</a>). Further pointers are in (<a href='#Lee17'>Lee 17, p. 3</a>):</p>
+
+<blockquote>
+<p>There are many works explaining the rotation curves of dwarf [17, 23, 69], and large galaxies [29, 43, 70–78] in this model.</p>
+</blockquote>
+
 <h2 id='References'>References</h2>
 
 <h3 id='original_articles'>Original articles</h3>
@@ -1177,14 +1183,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 15, 2018 10:04:10 
+  Revised on January 26, 2018 06:24:24 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/fuzzy+dark+matter" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fuzzy+dark+matter/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/fuzzy+dark+matter" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fuzzy+dark+matter" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/fuzzy+dark+matter" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fuzzy+dark+matter/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/fuzzy+dark+matter" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fuzzy+dark+matter" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
